# sp1-pay

./: .gitignore  .gitmodules  Cargo.toml  remappings.txt
api/: Cargo.toml
broadcast/Deploy.s.sol/11155111/: run-1721947059.json  run-1721947110.json  run-1721949281.json  run-1721949590.json  run-1721950877.json
common/: Cargo.toml
common/src/: types.rs
contracts/: BonsaiPay.sol  foundry.toml
contracts/broadcast/Deploy.s.sol/11155111/: run-1721951832.json  run-1722018765.json  run-1723574483.json  run-1723676939.json  run-1723678319.json
contracts/script/: Deploy.s.sol
contracts/src/: BonsaiPay.sol
contracts/src/fixtures/: fixture.json
contracts/test/: BonsaiPay.t.sol
elf/: riscv32im-succinct-zkvm-elf
forge-scripts/: Deploy.s.sol
oidc-validator/: Cargo.toml
oidc-validator/src/: certs.rs  lib.rs
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs
script/: Cargo.toml
script/src/: lib.rs
tests/: Elf.sol
ui/: Cargo.toml  index.html  package.json  pnpm-lock.yaml  vercel.json
ui/api/: handler.rs  prove.rs  requestProof.rs  waitProof.rs
ui/src/: App.tsx  generated.ts  lib.rs
ui/src/abi/: SP1Pay.json  SP1Pay.ts
ui/src/components/: Claim.tsx  Prove.tsx
