[workspace]
members = ["./common", "./program", "./script", "./oidc-validator", "./api"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
dotenv = "0.15.0"
eyre = "0.6.12"
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.1.1" }
tokio = "1.38.0"
tracing = "0.1.37"
serde = "1.0.203"
ssz-rs = { package = "ssz_rs", version = "0.9.0" }
thiserror = "1.0.61"
serde_cbor = "0.11.2"
hex = "0.4.3"
serde_json = "1.0.11"
serde_with = { version = "3.4.0", features = ["hex"] }
alloy-primitives = { version = "0.7.7", features=["serde"]}
clap = "4.5.9"
log = "0.4.22"
env_logger = "0.11.3"
alloy-sol-types = {version = "0.7.7"}
ethers = "2.0.14"
anyhow = "1.0.86"
reqwest = "0.12.5"
sp1-helper = { git = "https://github.com/succinctlabs/sp1", tag = "v1.1.1" }
# jwt-compact = { path = "../jwt-compact",  default-features = false, features = ["rsa", "std"] }
jwt-compact = { version = "0.7", default-features = false, features = ["rsa"] }
lazy_static = "1.4.0"
warp = "0.3.6"
oidc-validator = { path = "./oidc-validator" }
sha2 = "0.10.8"
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.1.1" }
common = { path = "./common" }
# Documentation: https://docs.rs/vercel_runtime/latest/vercel_runtime
vercel_runtime = { version = "1" }
[patch.crates-io]
sha2-v0-9-9 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.9.9" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.10.8" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }