[package]
name = "api"
version = "0.1.0"
edition = "2021"

# Each handler has to be specified as [[bin]]
[[bin]]
name = "handler"
path = "handler.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
vercel_runtime = { workspace = true }
tokio = { workspace = true }