[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
vercel_runtime = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
