[package]
name = "oidc-validator"
version = "0.1.0"
edition = "2021"

[dependencies]
jwt-compact = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
common = { workspace = true }