[workspace]
[package]
version = "0.1.0"
name = "fibonacci-script"
edition = "2021"
default-run = "prove"

[[bin]]
name = "prove"
path = "src/bin/prove.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = "1.0.1"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
alloy-sol-types = "0.7.2"
hex = "0.4.3"
dotenv = "0.15.0"
alloy-primitives = "0.7.7"
anyhow = "1.0.86"
log = "0.4.22"
tokio = "1.39.1"
warp = "0.3.7"
ethers = "2.0.14"


[build-dependencies]
sp1-helper = "1.0.1"
