[package]
version = "0.1.0"
name = "sp1-pay-script"
edition = "2021"
default-run = "pubsub"

[[bin]]
name = "pubsub"
path = "src/bin/pubsub.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
dotenv = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
warp = { workspace = true }
ethers = { workspace = true }

[build-dependencies]
sp1-helper = { workspace = true }